# sync_clipboard

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
